# smssender-gtk

./: Makefile.am  README  TODO  configure.ac
src/: Makefile.am  smssender_gtk.py  smssender_gtk.ui
